...
                                        <rect key="frame" x="0.0" y="0.0" width="107" height="75"/>
                                        <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="22"/>
                                        <state key="normal" title="My People">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        </state>
...
                                        <rect key="frame" x="0.0" y="75" width="107" height="75"/>
                                        <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="22"/>
                                        <state key="normal" title="Account">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        </state>
...
                                        <rect key="frame" x="0.0" y="82" width="382" height="34"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                        <state key="normal" title="Logout"/>
                                        <connections>
                                            <action selector="logoutAction:" destination="j87-xM-Ik0" eventType="touchUpInside" id="eDZ-9G-SKv"/>
...
                    </view>
                    <navigationItem key="navigationItem" title="Account" id="jp5-Gx-Aj7">
                        <barButtonItem key="backBarButtonItem" title="Home" id="PBO-H9-3KG"/>
                    </navigationItem>
                    <connections>
...
                        <viewLayoutGuide key="safeArea" id="47V-cj-fw4"/>
                    </view>
                    <navigationItem key="navigationItem" title="Add New Person" id="B74-C1-VH0">
                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="0dd-9y-FK1">
                            <connections>
...
                    </view>
                    <navigationItem key="navigationItem" title="Home" id="U26-f1-ofv">
                        <barButtonItem key="leftBarButtonItem" title="Menu" image="icons8-menu-75" id="vs1-05-5iP">
                            <inset key="largeContentSizeImageInsets" minX="-50" minY="0.0" maxX="0.0" maxY="0.0"/>
                            <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                                        <rect key="frame" x="0.0" y="384" width="264" height="95"/>
                                        <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="24"/>
                                        <state key="normal" title="Login">
                                            <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        </state>
...
                                        <rect key="frame" x="0.0" y="479" width="264" height="95"/>
                                        <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="24"/>
                                        <state key="normal" title="Sign Up">
                                            <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        </state>
...
