...
            let person = self.friends[indexPaths!.row] as Person
            detailsVC.firstName = person.firstName
            detailsVC.lastName = person.lastName
            detailsVC.friendID = person.personID
            
            let backItem = UIBarButtonItem()
            backItem.title = "Back"
            navigationItem.backBarButtonItem = backItem
        }
    }
    
}

...
